--- a/courses/templates/course_list.html
+++ b/courses/templates/course_list.html
@@ -1,14 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Courses</title>
-</head>
-<body>
-    <h1>Available Courses</h1>
-    <ul>
-        <li>Django for Beginners</li>
-        <li>React with Next.js</li>
-        <li>Python Data Analysis</li>
-    </ul>
-</body>
-</html>
+<h1>Courses</h1>
+<a href="{% url 'add_course' %}">Add New Course</a>
+<ul>
+  {% for course in courses %}
+  <li>
+    <h2>{{ course.title }}</h2>
+    <p>{{ course.description }}</p>
+    {% if course.image %}
+    <img src="{{ course.image.url }}" width="200" />
+    {% endif %}
+    <p>
+      <a href="{% url 'edit_course' course.id %}">Edit</a> |
+      <a href="{% url 'delete_course' course.id %}">Delete</a>
+    </p>
+  </li>
+  {% empty %}
+  <li>No courses available</li>
+  {% endfor %}
+</ul>
