--- a/jobs/templates/job_list.html
+++ b/jobs/templates/job_list.html
@@ -26,7 +26,7 @@
 
                 <!-- Content -->
                 <div class="p-4">
-                    <h2 class="text-xl font-semibold text-gray-800">{{ job.title }}</h2>
+                    <a href="{% url 'job_detail' job.id %}" class="hover:underline">{{ job.title }}</a>
                     <p class="text-gray-600 text-sm mt-2 line-clamp-3">{{ job.description }}</p>
 
                     <p class="mt-3 text-sm text-gray-700">
